translate pages and new question also some fiexes

--- a/src/languages/english.json
+++ b/src/languages/english.json
@@ -10,6 +10,55 @@
         "Jesteś na końcu liceum i chcesz znaleźć idealną uczelnię, która nie tylko pomoże Ci zdobyć kompetencje, ale także rozwinie Twój krąg przyjaciół? Świetnie trafiłeś! Przejdź nasz 5-minutowy quiz i odkryj uczelnię, która spełni Twoje oczekiwania.":"Are you at the end of high school and want to find the perfect college that will not only help you gain competence, but also develop your circle of friends? You've come to a great place! Take our 5-minute quiz and discover the college that'll meet your needs.",
         "Ukończyłeś już studia licencjackie lub magisterskie i teraz szukasz szkoły podyplomowej lub programu doktorskiego? Trafiłeś w dziesiątkę! Przystąp teraz i odkryj idealną uczelnię dla Ciebie.": "Have you already completed your bachelor's or master's degree and are now looking for a postgraduate school or doctoral program? You've hit the jackpot! Join now and discover the perfect university for you.",
         "Jesteś rodzicem, który z troską myśli o przyszłości swojego dziecka i szuka odpowiedniej dla niego uczelni? Nasz quiz jest również dla Ciebie. Przystąp teraz i dowiedz się, która uczelnia spełni oczekiwania Twojego dziecka.":"Are you a parent who is concerned about your child's future and is looking for the right college for your child? Our quiz is also for you. Join now and find out which university will meet your child's expectations.",
-        "wyszukaj uczelnie...": "Search for colleges..."
+        "wyszukaj uczelnie...": "Search for colleges...",
+        "Kim jesteś?":"Who are you?",
+        "Rodzicem":"Parent",
+        "Absolwentem szkoły ponadpodstawowej":"A graduate of a secondary school",
+        "Absolwentem studiów":"College graduate",
+        "Absolwentem z zagranicy":"Graduate from abroad",
+        "Jakiego rodzaju studiami jesteś zainteresowany?":"What kind of studies are you interested in?",
+        "Studia dzienne":"Full-time studies",
+        "Studia zaoczne":"Study in absentia",
+        "Studia online":"Online studies",
+        "Czy ma dla ciebie znaczenie lokalizacja uczelni?":"Does the location of the university matter to you?",
+        "Nie":"No",
+        "Tak":"Yes",
+        "Jakie znaczenie ma dla ciebie ranking szkoły na tle ogólnopolskim?":"What is the significance to you of the school's ranking against the national background?",
+        "Bardzo małe znaczenie":"Very low importance",
+        "Małe znaczenie":"Low importance",
+        "Bez zdania":"No opinion",
+        "Duże znaczenie":"High importance",
+        "Bardzo duże znaczenie":"Very high importance",
+        "Zależy Mi na studiach, które prowadzą do konkretnego zawodu lub certyfikatu?":"I care about studies that lead to a specific profession or certification?",
+        "Bardzo się nie zgadzam":"I very much disagree",
+        "Nie zgadzam się":"I disagree",
+        "Zgadzam się":"I agree",
+        "Bardzo się zgadzam":"I very much agree",
+        "Preferujesz pracę z ludźmi, pracę z danymi, czy może prace z przyrodą?":"Do you prefer working with people, working with data, or perhaps working with nature?",
+        "Praca z ludźmi":"Working with people",
+        "Praca z danymi":"Working with data",
+        "Praca z naturą":"Working with nature",
+        "Czy preferujesz kierunki studiów prowadzące do pracy biurowej, fizyczna, naukowej, czy może bardziej jako freelancer?":"Do you prefer majors that lead to office work, physical work, scientific work, or more as a freelancer?",
+        "Praca biurowa":"Office work",
+        "Praca naukowa":"Scientific work",
+        "Praca fizyczna":"Physical work",
+        "Freelancerka":"Freelancer",
+        "Lubię zadania teoretyczne, oraz wykłady akademickie.":"I like theoretical assignments, and academic lectures.",
+        "Dalej":"Next",
+        "Analiza i rozwiązywanie problemów":"Analysis and problem solving",
+        "Empatia i komunikacja":"Empathy and communication",
+        "Kreatywność i innowacyjność":"Creativity and innovation",
+        "Zrozumienie technologii":"Understanding of technology",
+        "Jak daleko może znajdować się uczelnia?":"How far away can the university be?",
+        "Interesują mnie programy wymiany między narodowej lub praktyki zawodowe.":"I am interested in inter-national exchange programs or apprenticeships.",
+        "Jakie umiejętności uważasz za swoje największe atuty?":"What skills do you consider to be your greatest strengths?",
+        "Posiadam artystyczne lub twórcze zainteresowania.":"I have artistic or creative interests.",
+        "Interesuję się kwestiami społecznymi, takimi jak: edukacja, zdrowie publiczne lub pomoc społeczna.":"I am interested in social issues such as education, public health or social welfare.",
+        "Jestem zainteresowany pracą z technologią i komputerami.":"I am interested in working with technology and computers.",
+        "Pasjonuję mnie historia oraz kultura.":"I am passionate about history and culture.",
+        "Jestem zainteresowany zagadnieniami związanymi z ochroną środowiska lub zrównoważonym rozwojem.":"I am interested in environmental issues or sustainable development.",
+        "Interesuję się edycją filmów, obróbką zdjęć lub też innego rodzaju sztuką.":"I am interested in video editing, photo editing or other types of art.",
+        "Jestem zainteresowany matematyką, technologią, zarządzeniem danymi.":"I am interested in mathematics, technology, data management.",
+        "Preferuję pracę, która wymaga wysiłku naukowego i intelektualnego, oraz przeprowadzania badań.":"I prefer work that requires scientific and intellectual effort, and conducting research."
     }
 }
