update language, nava

--- a/src/languages/english.json
+++ b/src/languages/english.json
@@ -43,6 +43,19 @@
         "Praca naukowa":"Scientific work",
         "Praca fizyczna":"Physical work",
         "Freelancerka":"Freelancer",
+
+        "Czy ta strona jest bezpłatna?":"Is this website free of charge?",
+        "Tak, nasza strona jest całkowicie bezpłatna. Nie wymagamy żadnych opłat za korzystanie z naszych narzędzi i treści.":"Yes, our site is completely free of charge. We do not require any fees for the use of our tools and content.",
+        "Jakie są korzyści z wyboru właściwego kierunku studiów?":"What are the benefits of choosing the right field of study?",
+        "Wybór odpowiedniego kierunku studiów może znacząco wpłynąć na Twoją przyszłość zawodową. Pomaga to uniknąć frustracji i niezadowolenia z wyboru zawodu, a także zwiększa szanse na sukces i satysfakcję zawodową.":"Choosing the right course of study can significantly affect your professional future. It helps you avoid frustration and dissatisfaction with your career choice, and increases your chances of success and career satisfaction.",
+        "Czy mogę znaleźć informacje o uczelniach na tej stronie?":"Can I find information about universities on this site?",
+        "Tak, znajdziesz informacje o wielu uczelniach, ich programach studiów, lokalizacjach i wymaganiach rekrutacyjnych.":"Yes, you will find information about many universities, their study programs, locations and enrollment requirements.",
+        "Jakie kierunki studiów są najbardziej popularne?":"What are the most popular majors?",
+        "Przygotowaliśmy listę najpopularniejszych kierunków studiów, ale warto pamiętać, że popularność może się zmieniać w zależności od regionu i trendów.":"We've compiled a list of the most popular majors, but it's worth remembering that popularity can change depending on region and trends.",
+        "Jak mogę znaleźć odpowiedni kierunek studiów dla siebie?":"How can I find the right field of study for me?",
+        "Na naszej stronie oferujemy narzędzia do samooceny, w formie quizu, który pomoże Ci określić, jaka ścieżka może być najlepszy dla Ciebie.":"On our site we offer self-assessment tools, in the form of a quiz, which will help you determine what path may be best for you.",
+
+
         "Lubię zadania teoretyczne, oraz wykłady akademickie.":"I like theoretical assignments, and academic lectures.",
         "Dalej":"Next",
         "Analiza i rozwiązywanie problemów":"Analysis and problem solving",
