--- a/src/languages/ukrainian.json
+++ b/src/languages/ukrainian.json
@@ -12,6 +12,8 @@
         "Jesteś rodzicem, który z troską myśli o przyszłości swojego dziecka i szuka odpowiedniej dla niego uczelni? Nasz quiz jest również dla Ciebie. Przystąp teraz i dowiedz się, która uczelnia spełni oczekiwania Twojego dziecka.":"Ви батьки, які турбуються про майбутнє своєї дитини і шукають для неї найкращий університет? Наш тест також для вас. Приєднуйтесь зараз і дізнайтеся, який університет відповідатиме очікуванням вашої дитини.",
         "wyszukaj uczelnie...": "Пошук коледжів...",
         "Kim jesteś?":"Хто ти?",
+        "About": "про",
+        "Us": "нас",
         "Rodzicem":"Батько",
         "Absolwentem szkoły ponadpodstawowej":"Випускник середньої школи",
         "Absolwentem studiów":"Випускник університету",
@@ -21,6 +23,17 @@
         "Studia zaoczne":"Заочна форма навчання",
         "Studia online":"Онлайн-навчання",
         "Czy ma dla ciebie znaczenie lokalizacja uczelni?":"Чи має для вас значення місце розташування університету?",
+        "Czy ta strona jest bezpłatna?":"Чи є цей сайт безкоштовним?",
+        "Tak, nasza strona jest całkowicie bezpłatna. Nie wymagamy żadnych opłat za korzystanie z naszych narzędzi i treści.":"Так, наш веб-сайт є повністю безкоштовним. Ми не вимагаємо жодних платежів за використання наших інструментів та контенту.",
+        "Jakie są korzyści z wyboru właściwego kierunku studiów?":"Які переваги вибору правильного курсу навчання?",
+        "Wybór odpowiedniego kierunku studiów może znacząco wpłynąć na Twoją przyszłość zawodową. Pomaga to uniknąć frustracji i niezadowolenia z wyboru zawodu, a także zwiększa szanse na sukces i satysfakcję zawodową.":"Вибір правильного курсу навчання може мати значний вплив на ваше професійне майбутнє. Це допоможе вам уникнути розчарування та незадоволення своїм вибором професії, а також підвищить ваші шанси на успіх і задоволення від роботи",
+        "Czy mogę znaleźć informacje o uczelniach na tej stronie?":"Чи можу я знайти інформацію про університети на цьому сайті?",
+        "Tak, znajdziesz informacje o wielu uczelniach, ich programach studiów, lokalizacjach i wymaganiach rekrutacyjnych.":"Так, ви знайдете інформацію про багато університетів, їхні навчальні програми, місцезнаходження та умови вступу.",
+        "Jakie kierunki studiów są najbardziej popularne?":"Які курси в університетах є найпопулярнішими?",
+        "Przygotowaliśmy listę najpopularniejszych kierunków studiów, ale warto pamiętać, że popularność może się zmieniać w zależności od regionu i trendów.":"Ми склали список найпопулярніших спеціальностей, але варто пам'ятати, що популярність може змінюватися залежно від регіону та тенденцій.",
+        "Jak mogę znaleźć odpowiedni kierunek studiów dla siebie?":"Як я можу знайти потрібну мені спеціальність?",
+        "Na naszej stronie oferujemy narzędzia do samooceny, w formie quizu, który pomoże Ci określić, jaka ścieżka może być najlepszy dla Ciebie.":"На нашому сайті ми пропонуємо інструменти самооцінки у вигляді тесту, які допоможуть вам визначити, який шлях може бути найкращим для вас.",
+
         "Nie":"НI",
         "Tak":"Так",
         "Jakie znaczenie ma dla ciebie ranking szkoły na tle ogólnopolskim?":"Наскільки важливим, на Вашу думку, є рейтинг Вашого навчального закладу порівняно з національним рівнем?",
