--- a/src/languages/english.json
+++ b/src/languages/english.json
@@ -58,7 +58,7 @@
 
         "Lubię zadania teoretyczne, oraz wykłady akademickie.":"I like theoretical assignments, and academic lectures.",
         "Dalej":"Next",
-        "Analiza i rozwiązywanie problemów":"Analysis and problem solving",
+        "Rozwiązywanie problemów":"Problem solving",
         "Empatia i komunikacja":"Empathy and communication",
         "Kreatywność i innowacyjność":"Creativity and innovation",
         "Zrozumienie technologii":"Understanding of technology",
