--- a/src/languages/ukrainian.json
+++ b/src/languages/ukrainian.json
@@ -61,7 +61,7 @@
         "Posiadam artystyczne lub twórcze zainteresowania.":"У мене є художній або творчий інтерес.",
         "Interesuję się kwestiami społecznymi, takimi jak: edukacja, zdrowie publiczne lub pomoc społeczna.":"Мене цікавлять соціальні питання, такі як освіта, охорона здоров'я чи соціальний захист.",
         "Jestem zainteresowany pracą z technologią i komputerami.":"Мені цікаво працювати з технологіями та комп'ютерами.",
-        "Analiza i rozwiązywanie problemów":"Аналіз та вирішення проблем",
+        "Rozwiązywanie problemów":"вирішення проблем",
         "Empatia i komunikacja":"Емпатія та комунікація",
         "Kreatywność i innowacyjność":"Творчість та інновації",
         "Zrozumienie technologii":"Розуміння технологій",
