--- a/src/languages/english.json
+++ b/src/languages/english.json
@@ -44,7 +44,7 @@
         "Praca fizyczna":"Physical work",
         "Freelancerka":"Freelancer",
 
-        "Czy ta strona jest bezpłatna?":"Is this website free of charge?",
+        "Czy strona internetowa kampus-kompas jest bezpłatna?":"Is the campus-compass website free?",
         "Tak, nasza strona jest całkowicie bezpłatna. Nie wymagamy żadnych opłat za korzystanie z naszych narzędzi i treści.":"Yes, our site is completely free of charge. We do not require any fees for the use of our tools and content.",
         "Jakie są korzyści z wyboru właściwego kierunku studiów?":"What are the benefits of choosing the right field of study?",
         "Wybór odpowiedniego kierunku studiów może znacząco wpłynąć na Twoją przyszłość zawodową. Pomaga to uniknąć frustracji i niezadowolenia z wyboru zawodu, a także zwiększa szanse na sukces i satysfakcję zawodową.":"Choosing the right course of study can significantly affect your professional future. It helps you avoid frustration and dissatisfaction with your career choice, and increases your chances of success and career satisfaction.",
