--- a/src/languages/ukrainian.json
+++ b/src/languages/ukrainian.json
@@ -23,7 +23,7 @@
         "Studia zaoczne":"Заочна форма навчання",
         "Studia online":"Онлайн-навчання",
         "Czy ma dla ciebie znaczenie lokalizacja uczelni?":"Чи має для вас значення місце розташування університету?",
-        "Czy ta strona jest bezpłatna?":"Чи є цей сайт безкоштовним?",
+        "Czy strona internetowa kampus-kompas jest bezpłatna?":"Чи є сайт campus-compass безкоштовним?",
         "Tak, nasza strona jest całkowicie bezpłatna. Nie wymagamy żadnych opłat za korzystanie z naszych narzędzi i treści.":"Так, наш веб-сайт є повністю безкоштовним. Ми не вимагаємо жодних платежів за використання наших інструментів та контенту.",
         "Jakie są korzyści z wyboru właściwego kierunku studiów?":"Які переваги вибору правильного курсу навчання?",
         "Wybór odpowiedniego kierunku studiów może znacząco wpłynąć na Twoją przyszłość zawodową. Pomaga to uniknąć frustracji i niezadowolenia z wyboru zawodu, a także zwiększa szanse na sukces i satysfakcję zawodową.":"Вибір правильного курсу навчання може мати значний вплив на ваше професійне майбутнє. Це допоможе вам уникнути розчарування та незадоволення своїм вибором професії, а також підвищить ваші шанси на успіх і задоволення від роботи",
